--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,7 @@ body {
   fill: var(--accent-color);
 }
 
-/* ----- end section our team ------ */
+/* ----- end section clients ------ */
 
 /* ----- begin footer ------ */
 .page-footer {
