--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@
   --background-tertiary: #f4f4fd;
   --color-text-btn: #4d5ae5;
   --color-border-card: #e7e9fc;
+  --color-clients: #8e8f99;
+  --transition-duration: 250ms;
+  --transition-func: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -118,7 +121,15 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--primary-text-color);
+
+  transition: color var(--transition-duration) var(--transition-func);
 }
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--accent-color);
+}
+
 .page-nav {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -133,15 +144,11 @@ body {
   color: var(--accent-color);
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
 .nav-contact {
   font-size: 16px;
   line-height: 1.5;
   color: var(--secondary-text-color);
+  transition: color var(--transition-duration) var(--transition-func);
 }
 
 .nav-contact:hover,
@@ -181,6 +188,7 @@ body {
   max-width: 496px;
 }
 .btn-order-service {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -196,11 +204,16 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 16px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  transition: background-color var(--transition-duration) var(--transition-func),
+    box-shadow var(--transition-duration) var(--transition-func);
 }
 .btn-order-service:hover,
 .btn-order-service:focus {
   background-color: var(--background-accent);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* ----- end section hero  ------ */
@@ -299,11 +312,13 @@ body {
 }
 .social-list-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: var(--background-btn);
-  padding: 12px;
+  transition: background-color var(--transition-duration) var(--transition-func);
 }
 .social-list-icon {
   fill: #ffffff;
@@ -323,27 +338,31 @@ body {
 .clients-list {
   display: flex;
   column-gap: 24px;
-  align-items: center;
 }
 
 .clients-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 16px 32px;
-  border: 1px solid #8e8f99;
+  border: 1px solid var(--color-clients);
   border-radius: 4px;
   box-sizing: border-box;
+  transition: border var(--transition-duration) var(--transition-func);
 }
 
 .clients-item {
-  fill: #8e8f99;
+  fill: var(--color-clients);
+  transition: fill var(--transition-duration) var(--transition-func);
 }
 
 .clients-link:hover,
 .clients-link:focus {
   border: 1px solid var(--accent-color);
 }
-.clients-item:hover,
-.clients-item:focus {
+
+.clients-link:hover .clients-item,
+.clients-link:focus .clients-item {
   fill: var(--accent-color);
 }
 
@@ -399,11 +418,13 @@ body {
 
 .social-list-link-footer {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: var(--background-btn);
-  padding: 8px;
+  transition: background-color var(--transition-duration) var(--transition-func);
 }
 
 .social-list-icon-footer {
@@ -435,6 +456,11 @@ body {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  transition: background-color var(--transition-duration) var(--transition-func),
+    color var(--transition-duration) var(--transition-func),
+    border var(--transition-duration) var(--transition-func),
+    box-shadow var(--transition-duration) var(--transition-func);
 }
 
 .btn-filter:hover,
@@ -486,9 +512,38 @@ body {
   line-height: 1.5;
   color: var(--secondary-text-color);
 }
-.portfolio-page-list-item:hover,
-.portfolio-page-list-item:focus {
-  border: 1px solid #f4f4fd;
+.portfolio-page-item {
+  display: block;
+  transition: box-shadow var(--transition-duration) var(--transition-func);
+}
+.portfolio-page-item:hover,
+.portfolio-page-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-slides {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--tertiary-text-color);
+  background-color: var(--background-btn);
+  overflow: auto;
+  transform: translateY(100%);
+
+  transition: transform var(--transition-duration) var(--transition-func);
+}
+.portfolio-page-item:hover .overlay,
+.portfolio-page-item:focus .overlay {
+  transform: translateY(0%);
 }
