--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
   --color-clients: #8e8f99;
   --transition-duration: 250ms;
   --transition-func: cubic-bezier(0.4, 0, 0.2, 1);
+  --background-modal: #fcfcfc;
 }
 
 h1,
@@ -117,6 +118,7 @@ body {
   column-gap: 40px;
 }
 .nav-link {
+  
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -142,6 +144,17 @@ body {
 
 .page-nav .current {
   color: var(--accent-color);
+}
+
+.current::after {
+content:'';
+position: absolute;
+left: 0;
+bottom: -1px;
+width: 100%;
+height: 4px;
+background: var(--accent-color);
+border-radius: 2px;
 }
 
 .nav-contact {
@@ -546,4 +559,66 @@ body {
 .portfolio-page-item:hover .overlay,
 .portfolio-page-item:focus .overlay {
   transform: translateY(0%);
+}
+
+/* ----------- backdrop ------------*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+}
+.modal {
+  position: absolute;
+
+  width: 408px;
+  height: 584px;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background: var(--background-modal);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
+  width: 24px;
+  height: 24px;
+
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.modal-close-icon {
+  fill: var(--primary-text-color);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+background-color: var(--background-accent);  
+}
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon {
+fill: var(--main-title-text);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: none;
+  pointer-events: none;
 }
