--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,7 @@
   --color-text-btn: #4d5ae5;
   --color-border-card: #e7e9fc;
   --color-clients: #8e8f99;
-  --transition-duration: 250ms;
-  --transition-func: cubic-bezier(0.4, 0, 0.2, 1);
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --background-modal: #fcfcfc;
 }
 
@@ -118,6 +117,7 @@ body {
   column-gap: 40px;
 }
 .nav-link {
+  position: relative;
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -126,7 +126,7 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
 
-  transition: color var(--transition-duration) var(--transition-func);
+  transition: color var(--transition);
 }
 
 .nav-link:hover,
@@ -137,9 +137,6 @@ body {
 .nav-list-contact {
   margin-left: auto;
   column-gap: 40px;
-}
-.nav-list-item {
-  position: relative;
 }
 
 .page-nav .current {
@@ -161,7 +158,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--secondary-text-color);
-  transition: color var(--transition-duration) var(--transition-func);
+
+  transition: color var(--transition);
 }
 
 .nav-contact:hover,
@@ -220,9 +218,9 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
-  transition: background-color var(--transition-duration) var(--transition-func),
-    box-shadow var(--transition-duration) var(--transition-func);
-}
+  transition: background-color var(--transition);
+ }
+
 .btn-order-service:hover,
 .btn-order-service:focus {
   background-color: var(--background-accent);
@@ -331,10 +329,10 @@ body {
   height: 40px;
   border-radius: 50%;
   background-color: var(--background-btn);
-  transition: background-color var(--transition-duration) var(--transition-func);
+  transition: background-color var(--transition);
 }
 .social-list-icon {
-  fill: #ffffff;
+  fill: var(--main-title-text);
 }
 
 .social-list-link:hover,
@@ -361,17 +359,17 @@ body {
   border: 1px solid var(--color-clients);
   border-radius: 4px;
   box-sizing: border-box;
-  transition: border var(--transition-duration) var(--transition-func);
+  transition: border-color var(--transition), color var(--transition);
 }
 
 .clients-item {
   fill: var(--color-clients);
-  transition: fill var(--transition-duration) var(--transition-func);
+  transition: fill var(--transition);
 }
 
 .clients-link:hover,
 .clients-link:focus {
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .clients-link:hover .clients-item,
@@ -437,7 +435,7 @@ body {
   height: 40px;
   border-radius: 50%;
   background-color: var(--background-btn);
-  transition: background-color var(--transition-duration) var(--transition-func);
+  transition: background-color var(--transition);
 }
 
 .social-list-icon-footer {
@@ -470,10 +468,10 @@ body {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  transition: background-color var(--transition-duration) var(--transition-func),
-    color var(--transition-duration) var(--transition-func),
-    border var(--transition-duration) var(--transition-func),
-    box-shadow var(--transition-duration) var(--transition-func);
+  transition: color var(--transition),
+    background-color var(--transition),
+    border-color var(--transition),
+    box-shadow var(--transition);
 }
 
 .btn-filter:hover,
@@ -481,7 +479,7 @@ body {
 .btn-filter:active {
   background-color: var(--background-accent);
   color: var(--main-title-text);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -527,7 +525,7 @@ body {
 }
 .portfolio-page-item {
   display: block;
-  transition: box-shadow var(--transition-duration) var(--transition-func);
+  transition: box-shadow var(--transition);
 }
 .portfolio-page-item:hover,
 .portfolio-page-item:focus {
@@ -551,15 +549,17 @@ body {
   line-height: 1.5;
   color: var(--tertiary-text-color);
   background-color: var(--background-btn);
+  letter-spacing: 0.02em;
   overflow: auto;
   transform: translateY(100%);
 
-  transition: transform var(--transition-duration) var(--transition-func);
+  transition: transform var(--transition);
 }
 .portfolio-page-item:hover .overlay,
 .portfolio-page-item:focus .overlay {
   transform: translateY(0%);
 }
+
 
 /* ----------- backdrop ------------*/
 
@@ -570,12 +570,13 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--transition), visibility var(--transition);
 }
 .modal {
   position: absolute;
 
   width: 408px;
-  height: 584px;
+  min-height: 576px;
 
   top: 50%;
   left: 50%;
@@ -585,6 +586,8 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transition: transform var(--transition);
 }
 .modal-close-btn {
   position: absolute;
@@ -594,23 +597,28 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
   width: 24px;
   height: 24px;
 
   background: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  cursor: pointer;
+
+  transition: background-color var(--transition), border var(--transition);
 }
 
 .modal-close-icon {
   fill: var(--primary-text-color);
+
+  transition: fill var(--transition);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: var(--background-accent);
+  border: none;
 }
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
@@ -619,6 +627,6 @@ body {
 
 .is-hidden {
   opacity: 0;
-  visibility: none;
+  visibility: hidden;
   pointer-events: none;
 }
