--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ body {
   border-radius: 4px;
 
   transition: background-color var(--transition);
- }
+}
 
 .btn-order-service:hover,
 .btn-order-service:focus {
@@ -468,10 +468,8 @@ body {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  transition: color var(--transition),
-    background-color var(--transition),
-    border-color var(--transition),
-    box-shadow var(--transition);
+  transition: color var(--transition), background-color var(--transition),
+    border-color var(--transition), box-shadow var(--transition);
 }
 
 .btn-filter:hover,
@@ -560,16 +558,18 @@ body {
   transform: translateY(0%);
 }
 
-
 /* ----------- backdrop ------------*/
 
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
   background: rgba(46, 47, 66, 0.4);
+
   transition: opacity var(--transition), visibility var(--transition);
 }
 .modal {
