--- a/css/styles.css
+++ b/css/styles.css
@@ -564,7 +564,6 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
 
@@ -575,7 +574,8 @@ body {
 .modal {
   position: absolute;
 
-  width: 408px;
+  max-width: 408px;
+  width: 100%;
   min-height: 576px;
 
   top: 50%;
