--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--secondary-text-color);
-
   transition: color var(--transition);
 }
 
@@ -215,6 +214,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 16px 32px;
+  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
@@ -548,7 +548,9 @@ body {
   color: var(--tertiary-text-color);
   background-color: var(--background-btn);
   letter-spacing: 0.02em;
+
   overflow: auto;
+  
   transform: translateY(100%);
 
   transition: transform var(--transition);
@@ -564,6 +566,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
 
@@ -574,8 +577,7 @@ body {
 .modal {
   position: absolute;
 
-  max-width: 408px;
-  width: 100%;
+  width: 408px;
   min-height: 576px;
 
   top: 50%;
