--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ body {
   font-size: 18px;
   line-height: 1.17;
   margin-right: 76px;
+  letter-spacing: 0.03em;
 }
 .page-header {
   border-bottom: 1px solid #e7e9fc;
@@ -122,6 +123,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   padding-top: 24px;
   padding-bottom: 24px;
@@ -157,6 +159,7 @@ body {
 .nav-contact {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 
   transition: color var(--transition);
@@ -172,6 +175,7 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   text-align: center;
   margin-bottom: 72px;
@@ -194,6 +198,7 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
   text-align: center;
   margin: 0 auto 48px;
   max-width: 496px;
@@ -244,6 +249,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   margin-bottom: 8px;
 }
@@ -251,6 +257,7 @@ body {
 .description-text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
 
@@ -300,6 +307,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   margin-bottom: 8px;
 }
@@ -307,6 +315,7 @@ body {
 .position-member-team {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   margin-bottom: 8px;
 }
@@ -392,6 +401,7 @@ body {
 .page-footer-text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--tertiary-text-color);
   max-width: 264px;
 }
@@ -418,6 +428,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--main-title-text);
   margin-bottom: 16px;
 }
@@ -462,6 +473,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em;
 
   color: var(--color-text-btn);
   background-color: var(--background-tertiary);
@@ -515,12 +527,14 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
   margin-bottom: 8px;
 }
 .section-filter {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
 .portfolio-page-item {
