--- a/css/styles.css
+++ b/css/styles.css
@@ -397,9 +397,6 @@ body {
 /* ----- begin footer ------ */
 .page-footer {
   background-color: var(--background-secondary);
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1440px;
 }
 
 .page-footer-text {
@@ -423,7 +420,6 @@ body {
   display: flex;
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-left: 156px;
   align-items: flex-start;
   column-gap: 120px;
 }
@@ -484,7 +480,7 @@ body {
 
   border: 1px solid #e7e9fc;
   border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 
   transition: color var(--transition), background-color var(--transition),
     border-color var(--transition), box-shadow var(--transition);
@@ -505,11 +501,11 @@ body {
   justify-content: center;
   align-items: flex-start;
   gap: 24px;
-  padding-top: 96px;
   padding-bottom: 72px;
 }
 
 .portfolio-page {
+  padding-top: 96px;
   padding-bottom: 120px;
 }
 
@@ -583,7 +579,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  
+
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
